--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -412,8 +412,8 @@
         margin-left: 0;
     }
     .service-box-item figure {
-        width: 100px;
-        height: 100px;
+        width: 50px;
+        height: 50px;
         margin-bottom: 15px !important;
     }
     .service-box-item figure img{
@@ -570,7 +570,7 @@
         padding-top: 0;
     }
     .service-box-item {
-        box-shadow: 0 0 50px 0 #e9eefc;
+        /* box-shadow: 0 0 50px 0 #e9eefc; */
     }
     .skill-right-con{
         text-align: center;
@@ -1128,6 +1128,24 @@
         justify-content: center !important;
         align-items: center;
     }
+    .services-card {
+        gap:10px
+    }
+    .card .card-inner {
+        height: 22.75rem;
+    }
+    .service-box-item-content h5 {
+        margin-top: 0 !important;
+      }
+      .service-box-item figure {
+        width: 50px;
+        height: 50px;
+        margin-bottom: 0px !important;
+    }
+    .corporate-slider {
+        max-width: 300px; 
+        margin: 0 auto; /* Center align the slider */
+      }
 }
 @media only screen and (max-width: 450px){
     .portfolio-img-title {
